// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App.vue normal test. data record input 1`] = `
<div data-app="true" class="v-application v-application--is-ltr theme--light" id="app">
  <div class="v-application--wrap">
    <header class="v-sheet v-sheet--tile theme--dark v-toolbar v-toolbar--dense v-app-bar v-app-bar--fixed primary" style="height: 48px; margin-top: 0px; transform: translateY(0px); left: 0px; right: 0px;">
      <div class="v-toolbar__content" style="height: 48px;">
        <div class="d-flex align-center">
          FBデータ解析ツール
        </div>
      </div>
    </header>
    <main class="v-content" style="padding: 48px 0px 0px 0px;">
      <div class="v-content__wrap">
        <div class="container">
          <div class="row">
            <div class="v-input v-textarea v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--single-line v-text-field--filled v-text-field--enclosed v-text-field--outlined v-text-field--placeholder">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <fieldset aria-hidden="true">
                    <legend><span>​</span></legend>
                  </fieldset>
                  <div class="v-text-field__slot"><textarea id="input-156" placeholder="FBデータを貼り付けてください" rows="5"></textarea></div>
                </div>
                <div class="v-text-field__details">
                  <div class="v-messages theme--light">
                    <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="row"></div>
          <div class="row">
            <div class="v-tabs v-tabs--grow theme--light">
              <div role="tablist" class="v-item-group theme--light v-slide-group v-tabs-bar v-tabs-bar--is-mobile primary--text primary">
                <div class="v-slide-group__prev v-slide-group__prev--disabled">
                  <transition-stub name="fade-transition"></transition-stub>
                </div>
                <div class="v-slide-group__wrapper">
                  <div class="v-slide-group__content v-tabs-bar__content">
                    <div class="v-tabs-slider-wrapper" style="transition: none;">
                      <div class="v-tabs-slider"></div>
                    </div>
                    <div tabindex="0" aria-selected="false" role="tab" class="v-tab">
                      ヘッダレコード
                    </div>
                    <div tabindex="0" aria-selected="true" role="tab" class="v-tab v-tab--active">
                      データレコード
                    </div>
                    <div tabindex="0" aria-selected="false" role="tab" class="v-tab">
                      トレーラレコード
                    </div>
                    <div tabindex="0" aria-selected="false" role="tab" class="v-tab">
                      エンドレコード
                    </div>
                    <div tabindex="0" aria-selected="false" role="tab" class="v-tab">
                      不明
                    </div>
                  </div>
                </div>
                <div class="v-slide-group__next v-slide-group__next--disabled">
                  <transition-stub name="fade-transition"></transition-stub>
                </div>
              </div>
              <div class="v-window v-item-group theme--light v-tabs-items">
                <div class="v-window__container">
                  <transition-stub name="">
                    <div class="v-window-item" style="display: none;">
                      <div class="v-card v-sheet theme--light">
                        <div class="v-card__title">
                          <div class="spacer"></div>
                          <div class="v-input v-input--hide-details theme--light v-text-field v-text-field--single-line">
                            <div class="v-input__control">
                              <div class="v-input__slot">
                                <div class="v-text-field__slot"><label for="input-183" class="v-label theme--light" style="left: 0px; position: absolute;">Search</label><input id="input-183" type="text"></div>
                                <div class="v-input__append-inner">
                                  <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-magnify theme--light"></i></div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div class="v-data-table theme--light">
                          <div class="v-data-table__wrapper">
                            <table>
                              <colgroup>
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                              </colgroup>
                              <thead class="v-data-table-header">
                                <tr>
                                  <th role="columnheader" scope="col" aria-label="行" class="text-start" style="width: 2rem; min-width: 2rem;"><span>行</span><span class="v-tooltip v-tooltip--top"><!----></span></th>
                                  <th role="columnheader" scope="col" aria-label="データ区分" class="text-start" style="width: 4.5rem; min-width: 4.5rem;"><span>データ区分</span><span class="v-tooltip v-tooltip--top"><!----></span></th>
                                  <th role="columnheader" scope="col" aria-label="種別コード" class="text-start"><span>種別コード</span><span class="v-tooltip v-tooltip--top"><!----></span></th>
                                  <th role="columnheader" scope="col" aria-label="コード区分" class="text-start"><span>コード区分</span><span class="v-tooltip v-tooltip--top"><!----></span></th>
                                  <th role="columnheader" scope="col" aria-label="振込依頼人コード" class="text-start"><span>振込依頼人コード</span><span class="v-tooltip v-tooltip--top"><!----></span></th>
                                  <th role="columnheader" scope="col" aria-label="振込依頼人名" class="text-start"><span>振込依頼人名</span><span class="v-tooltip v-tooltip--top"><!----></span></th>
                                  <th role="columnheader" scope="col" aria-label="取組日" class="text-start"><span>取組日</span><span class="v-tooltip v-tooltip--top"><!----></span></th>
                                  <th role="columnheader" scope="col" aria-label="仕向銀行番号" class="text-start"><span>仕向銀行番号</span><span class="v-tooltip v-tooltip--top"><!----></span></th>
                                  <th role="columnheader" scope="col" aria-label="仕向銀行名" class="text-start"><span>仕向銀行名</span><span class="v-tooltip v-tooltip--top"><!----></span></th>
                                  <th role="columnheader" scope="col" aria-label="仕向支店番号" class="text-start"><span>仕向支店番号</span><span class="v-tooltip v-tooltip--top"><!----></span></th>
                                  <th role="columnheader" scope="col" aria-label="仕向支店名" class="text-start"><span>仕向支店名</span><span class="v-tooltip v-tooltip--top"><!----></span></th>
                                  <th role="columnheader" scope="col" aria-label="預金種目（依頼人）" class="text-start"><span>預金種目（依頼人）</span><span class="v-tooltip v-tooltip--top"><!----></span></th>
                                  <th role="columnheader" scope="col" aria-label="口座番号（依頼人）" class="text-start"><span>口座番号（依頼人）</span><span class="v-tooltip v-tooltip--top"><!----></span></th>
                                  <th role="columnheader" scope="col" aria-label="ダミー" class="text-start"><span>ダミー</span><span class="v-tooltip v-tooltip--top"><!----></span></th>
                                </tr>
                              </thead>
                              <tbody>
                                <tr class="v-data-table__empty-wrapper">
                                  <td colspan="14">
                                    レコードがありません
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </div>
                          <div class="v-data-footer">
                            <div class="v-data-footer__select">Rows per page:<div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select">
                                <div class="v-input__control">
                                  <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-218" class="v-input__slot">
                                    <div class="v-select__slot">
                                      <div class="v-select__selections">
                                        <div class="v-select__selection v-select__selection--comma">5</div><input aria-label="$vuetify.dataTable.itemsPerPageText" id="input-218" readonly="readonly" type="text" aria-readonly="false" autocomplete="off">
                                      </div>
                                      <div class="v-input__append-inner">
                                        <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
                                      </div><input type="hidden" value="5">
                                    </div>
                                    <div class="v-menu">
                                      <!---->
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div class="v-data-footer__pagination">–</div>
                            <div class="v-data-footer__icons-before"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Previous page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-left theme--light"></i></span></button></div>
                            <div class="v-data-footer__icons-after"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Next page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-right theme--light"></i></span></button></div>
                          </div>
                        </div>
                      </div>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </div>
                  </transition-stub>
                  <transition-stub name="">
                    <div class="v-window-item v-window-item--active">
                      <!---->
                      <div class="v-card v-sheet theme--light">
                        <div class="v-card__title">
                          <div class="spacer"></div>
                          <div class="v-input v-input--hide-details theme--light v-text-field v-text-field--single-line">
                            <div class="v-input__control">
                              <div class="v-input__slot">
                                <div class="v-text-field__slot"><label for="input-228" class="v-label theme--light" style="left: 0px; position: absolute;">Search</label><input id="input-228" type="text"></div>
                                <div class="v-input__append-inner">
                                  <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-magnify theme--light"></i></div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div class="v-data-table theme--light">
                          <div class="v-data-table__wrapper">
                            <table>
                              <colgroup>
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                              </colgroup>
                              <thead class="v-data-table-header">
                                <tr>
                                  <th role="columnheader" scope="col" aria-label="行" class="text-start" style="width: 2rem; min-width: 2rem;"><span>行</span><span class="v-tooltip v-tooltip--top"><!----></span></th>
                                  <th role="columnheader" scope="col" aria-label="データ区分" class="text-start" style="width: 4.5rem; min-width: 4.5rem;"><span>データ区分</span><span class="v-tooltip v-tooltip--top"><!----></span></th>
                                  <th role="columnheader" scope="col" aria-label="被仕向銀行番号" class="text-start"><span>被仕向銀行番号</span><span class="v-tooltip v-tooltip--top"><!----></span></th>
                                  <th role="columnheader" scope="col" aria-label="被仕向銀行名" class="text-start"><span>被仕向銀行名</span><span class="v-tooltip v-tooltip--top"><!----></span></th>
                                  <th role="columnheader" scope="col" aria-label="被仕向支店番号" class="text-start"><span>被仕向支店番号</span><span class="v-tooltip v-tooltip--top"><!----></span></th>
                                  <th role="columnheader" scope="col" aria-label="被仕向支店名" class="text-start"><span>被仕向支店名</span><span class="v-tooltip v-tooltip--top"><!----></span></th>
                                  <th role="columnheader" scope="col" aria-label="手形交換所番号" class="text-start"><span>手形交換所番号</span><span class="v-tooltip v-tooltip--top"><!----></span></th>
                                  <th role="columnheader" scope="col" aria-label="預金種目" class="text-start"><span>預金種目</span><span class="v-tooltip v-tooltip--top"><!----></span></th>
                                  <th role="columnheader" scope="col" aria-label="口座番号" class="text-start"><span>口座番号</span><span class="v-tooltip v-tooltip--top"><!----></span></th>
                                  <th role="columnheader" scope="col" aria-label="受取人名" class="text-start"><span>受取人名</span><span class="v-tooltip v-tooltip--top"><!----></span></th>
                                  <th role="columnheader" scope="col" aria-label="振込金額" class="text-start"><span>振込金額</span><span class="v-tooltip v-tooltip--top"><!----></span></th>
                                  <th role="columnheader" scope="col" aria-label="新規コード" class="text-start"><span>新規コード</span><span class="v-tooltip v-tooltip--top"><!----></span></th>
                                  <th role="columnheader" scope="col" aria-label="EDI情報" class="text-start"><span>EDI情報</span><span class="v-tooltip v-tooltip--top"><!----></span></th>
                                  <th role="columnheader" scope="col" aria-label="振込指定区分" class="text-start"><span>振込指定区分</span><span class="v-tooltip v-tooltip--top"><!----></span></th>
                                  <th role="columnheader" scope="col" aria-label="識別表示" class="text-start"><span>識別表示</span><span class="v-tooltip v-tooltip--top"><!----></span></th>
                                  <th role="columnheader" scope="col" aria-label="ダミー" class="text-start"><span>ダミー</span><span class="v-tooltip v-tooltip--top"><!----></span></th>
                                </tr>
                              </thead>
                              <tbody>
                                <tr class="">
                                  <td class="text-start">1</td>
                                  <td class="text-start">2</td>
                                  <td class="text-start">2606</td>
                                  <td class="text-start">ﾃｽﾄﾃﾞｰﾀ1111 </td>
                                  <td class="text-start">123</td>
                                  <td class="text-start">ｻﾝﾌﾟﾙ </td>
                                  <td class="text-start"> </td>
                                  <td class="text-start">1</td>
                                  <td class="text-start">1234567</td>
                                  <td class="text-start">ｳｹﾄﾘﾆﾝﾒｲ </td>
                                  <td class="text-start">0000000100</td>
                                  <td class="text-start">0</td>
                                  <td class="text-start"> </td>
                                  <td class="text-start">0</td>
                                  <td class="text-start"> </td>
                                  <td class="text-start"> </td>
                                </tr>
                                <tr class="">
                                  <td class="text-start">2</td>
                                  <td class="text-start">2</td>
                                  <td class="text-start">2606</td>
                                  <td class="text-start">ﾃｽﾄﾃﾞｰﾀ1112 </td>
                                  <td class="text-start">123</td>
                                  <td class="text-start">ｻﾝﾌﾟﾙ </td>
                                  <td class="text-start"> </td>
                                  <td class="text-start">1</td>
                                  <td class="text-start">1234567</td>
                                  <td class="text-start">ｳｹﾄﾘﾆﾝﾒｲ </td>
                                  <td class="text-start">0000000100</td>
                                  <td class="text-start">0</td>
                                  <td class="text-start">ﾏｲﾂｷﾌﾞﾝ </td>
                                  <td class="text-start">0</td>
                                  <td class="text-start">Y</td>
                                  <td class="text-start"> </td>
                                </tr>
                                <tr class="">
                                  <td class="text-start">3</td>
                                  <td class="text-start">2</td>
                                  <td class="text-start">2606</td>
                                  <td class="text-start">ﾃｽﾄﾃﾞｰﾀ1113 </td>
                                  <td class="text-start">123</td>
                                  <td class="text-start">ｻﾝﾌﾟﾙ </td>
                                  <td class="text-start"> </td>
                                  <td class="text-start">1</td>
                                  <td class="text-start">1234567</td>
                                  <td class="text-start">ｳｹﾄﾘﾆﾝﾒｲ </td>
                                  <td class="text-start">0000000100</td>
                                  <td class="text-start">0</td>
                                  <td class="text-start">221201001 000001 </td>
                                  <td class="text-start">0</td>
                                  <td class="text-start"> </td>
                                  <td class="text-start"> </td>
                                </tr>
                              </tbody>
                            </table>
                          </div>
                          <div class="v-data-footer">
                            <div class="v-data-footer__select">Rows per page:<div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select">
                                <div class="v-input__control">
                                  <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-267" class="v-input__slot">
                                    <div class="v-select__slot">
                                      <div class="v-select__selections">
                                        <div class="v-select__selection v-select__selection--comma">5</div><input aria-label="$vuetify.dataTable.itemsPerPageText" id="input-267" readonly="readonly" type="text" aria-readonly="false" autocomplete="off">
                                      </div>
                                      <div class="v-input__append-inner">
                                        <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
                                      </div><input type="hidden" value="5">
                                    </div>
                                    <div class="v-menu">
                                      <!---->
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div class="v-data-footer__pagination">1-3 of 3</div>
                            <div class="v-data-footer__icons-before"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Previous page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-left theme--light"></i></span></button></div>
                            <div class="v-data-footer__icons-after"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Next page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-right theme--light"></i></span></button></div>
                          </div>
                        </div>
                      </div>
                      <!---->
                      <!---->
                      <!---->
                    </div>
                  </transition-stub>
                  <transition-stub name="">
                    <!---->
                  </transition-stub>
                  <transition-stub name="">
                    <!---->
                  </transition-stub>
                  <transition-stub name="">
                    <!---->
                  </transition-stub>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`App.vue normal test. header record input 1`] = `
<div data-app="true" class="v-application v-application--is-ltr theme--light" id="app">
  <div class="v-application--wrap">
    <header class="v-sheet v-sheet--tile theme--dark v-toolbar v-toolbar--dense v-app-bar v-app-bar--fixed primary" style="height: 48px; margin-top: 0px; transform: translateY(0px); left: 0px; right: 0px;">
      <div class="v-toolbar__content" style="height: 48px;">
        <div class="d-flex align-center">
          FBデータ解析ツール
        </div>
      </div>
    </header>
    <main class="v-content" style="padding: 48px 0px 0px 0px;">
      <div class="v-content__wrap">
        <div class="container">
          <div class="row">
            <div class="v-input v-textarea v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--single-line v-text-field--filled v-text-field--enclosed v-text-field--outlined v-text-field--placeholder">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <fieldset aria-hidden="true">
                    <legend><span>​</span></legend>
                  </fieldset>
                  <div class="v-text-field__slot"><textarea id="input-81" placeholder="FBデータを貼り付けてください" rows="5"></textarea></div>
                </div>
                <div class="v-text-field__details">
                  <div class="v-messages theme--light">
                    <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="row"></div>
          <div class="row">
            <div class="v-tabs v-tabs--grow theme--light">
              <div role="tablist" class="v-item-group theme--light v-slide-group v-tabs-bar v-tabs-bar--is-mobile primary--text primary">
                <div class="v-slide-group__prev v-slide-group__prev--disabled">
                  <transition-stub name="fade-transition"></transition-stub>
                </div>
                <div class="v-slide-group__wrapper">
                  <div class="v-slide-group__content v-tabs-bar__content">
                    <div class="v-tabs-slider-wrapper" style="transition: none;">
                      <div class="v-tabs-slider"></div>
                    </div>
                    <div tabindex="0" aria-selected="true" role="tab" class="v-tab v-tab--active">
                      ヘッダレコード
                    </div>
                    <div tabindex="0" aria-selected="false" role="tab" class="v-tab">
                      データレコード
                    </div>
                    <div tabindex="0" aria-selected="false" role="tab" class="v-tab">
                      トレーラレコード
                    </div>
                    <div tabindex="0" aria-selected="false" role="tab" class="v-tab">
                      エンドレコード
                    </div>
                    <div tabindex="0" aria-selected="false" role="tab" class="v-tab">
                      不明
                    </div>
                  </div>
                </div>
                <div class="v-slide-group__next v-slide-group__next--disabled">
                  <transition-stub name="fade-transition"></transition-stub>
                </div>
              </div>
              <div class="v-window v-item-group theme--light v-tabs-items">
                <div class="v-window__container">
                  <transition-stub name="">
                    <div class="v-window-item v-window-item--active">
                      <div class="v-card v-sheet theme--light">
                        <div class="v-card__title">
                          <div class="spacer"></div>
                          <div class="v-input v-input--hide-details theme--light v-text-field v-text-field--single-line">
                            <div class="v-input__control">
                              <div class="v-input__slot">
                                <div class="v-text-field__slot"><label for="input-108" class="v-label theme--light" style="left: 0px; position: absolute;">Search</label><input id="input-108" type="text"></div>
                                <div class="v-input__append-inner">
                                  <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-magnify theme--light"></i></div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div class="v-data-table theme--light">
                          <div class="v-data-table__wrapper">
                            <table>
                              <colgroup>
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                                <col class="">
                              </colgroup>
                              <thead class="v-data-table-header">
                                <tr>
                                  <th role="columnheader" scope="col" aria-label="行" class="text-start" style="width: 2rem; min-width: 2rem;"><span class="v-tooltip v-tooltip--top"><!----><span>行</span></span></th>
                                  <th role="columnheader" scope="col" aria-label="データ区分" class="text-start" style="width: 4.5rem; min-width: 4.5rem;"><span class="v-tooltip v-tooltip--top"><!----><span>データ区分</span></span></th>
                                  <th role="columnheader" scope="col" aria-label="種別コード" class="text-start"><span class="v-tooltip v-tooltip--top"><!----><span>種別コード</span></span></th>
                                  <th role="columnheader" scope="col" aria-label="コード区分" class="text-start"><span class="v-tooltip v-tooltip--top"><!----><span>コード区分</span></span></th>
                                  <th role="columnheader" scope="col" aria-label="振込依頼人コード" class="text-start"><span class="v-tooltip v-tooltip--top"><!----><span>振込依頼人コード</span></span></th>
                                  <th role="columnheader" scope="col" aria-label="振込依頼人名" class="text-start"><span class="v-tooltip v-tooltip--top"><!----><span>振込依頼人名</span></span></th>
                                  <th role="columnheader" scope="col" aria-label="取組日" class="text-start"><span class="v-tooltip v-tooltip--top"><!----><span>取組日</span></span></th>
                                  <th role="columnheader" scope="col" aria-label="仕向銀行番号" class="text-start"><span class="v-tooltip v-tooltip--top"><!----><span>仕向銀行番号</span></span></th>
                                  <th role="columnheader" scope="col" aria-label="仕向銀行名" class="text-start"><span class="v-tooltip v-tooltip--top"><!----><span>仕向銀行名</span></span></th>
                                  <th role="columnheader" scope="col" aria-label="仕向支店番号" class="text-start"><span class="v-tooltip v-tooltip--top"><!----><span>仕向支店番号</span></span></th>
                                  <th role="columnheader" scope="col" aria-label="仕向支店名" class="text-start"><span class="v-tooltip v-tooltip--top"><!----><span>仕向支店名</span></span></th>
                                  <th role="columnheader" scope="col" aria-label="預金種目（依頼人）" class="text-start"><span class="v-tooltip v-tooltip--top"><!----><span>預金種目（依頼人）</span></span></th>
                                  <th role="columnheader" scope="col" aria-label="口座番号（依頼人）" class="text-start"><span class="v-tooltip v-tooltip--top"><!----><span>口座番号（依頼人）</span></span></th>
                                  <th role="columnheader" scope="col" aria-label="ダミー" class="text-start"><span class="v-tooltip v-tooltip--top"><!----><span>ダミー</span></span></th>
                                </tr>
                              </thead>
                              <tbody>
                                <tr class="">
                                  <td class="text-start">1</td>
                                  <td class="text-start">1</td>
                                  <td class="text-start">23</td>
                                  <td class="text-start">0</td>
                                  <td class="text-start">1234567890</td>
                                  <td class="text-start">ｻﾝﾌﾟﾙﾀﾛｳ </td>
                                  <td class="text-start">1221</td>
                                  <td class="text-start">1234</td>
                                  <td class="text-start"> </td>
                                  <td class="text-start">123</td>
                                  <td class="text-start"> </td>
                                  <td class="text-start">2</td>
                                  <td class="text-start">1234567</td>
                                  <td class="text-start"> </td>
                                </tr>
                              </tbody>
                            </table>
                          </div>
                          <div class="v-data-footer">
                            <div class="v-data-footer__select">Rows per page:<div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select">
                                <div class="v-input__control">
                                  <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-143" class="v-input__slot">
                                    <div class="v-select__slot">
                                      <div class="v-select__selections">
                                        <div class="v-select__selection v-select__selection--comma">5</div><input aria-label="$vuetify.dataTable.itemsPerPageText" id="input-143" readonly="readonly" type="text" aria-readonly="false" autocomplete="off">
                                      </div>
                                      <div class="v-input__append-inner">
                                        <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
                                      </div><input type="hidden" value="5">
                                    </div>
                                    <div class="v-menu">
                                      <!---->
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div class="v-data-footer__pagination">1-1 of 1</div>
                            <div class="v-data-footer__icons-before"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Previous page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-left theme--light"></i></span></button></div>
                            <div class="v-data-footer__icons-after"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Next page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-right theme--light"></i></span></button></div>
                          </div>
                        </div>
                      </div>
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </div>
                  </transition-stub>
                  <transition-stub name="">
                    <!---->
                  </transition-stub>
                  <transition-stub name="">
                    <!---->
                  </transition-stub>
                  <transition-stub name="">
                    <!---->
                  </transition-stub>
                  <transition-stub name="">
                    <!---->
                  </transition-stub>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`App.vue normal test. layout 1`] = `
<div data-app="true" class="v-application v-application--is-ltr theme--light" id="app">
  <div class="v-application--wrap">
    <header class="v-sheet v-sheet--tile theme--dark v-toolbar v-toolbar--dense v-app-bar v-app-bar--fixed primary" style="height: 48px; margin-top: 0px; transform: translateY(0px); left: 0px; right: 0px;">
      <div class="v-toolbar__content" style="height: 48px;">
        <div class="d-flex align-center">
          FBデータ解析ツール
        </div>
      </div>
    </header>
    <main class="v-content" style="padding: 48px 0px 0px 0px;">
      <div class="v-content__wrap">
        <div class="container">
          <div class="row">
            <div class="v-input v-textarea theme--light v-text-field v-text-field--single-line v-text-field--filled v-text-field--enclosed v-text-field--outlined v-text-field--placeholder">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <fieldset aria-hidden="true">
                    <legend><span>​</span></legend>
                  </fieldset>
                  <div class="v-text-field__slot"><textarea id="input-6" placeholder="FBデータを貼り付けてください" rows="5"></textarea></div>
                </div>
                <div class="v-text-field__details">
                  <div class="v-messages theme--light">
                    <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="row"></div>
          <div class="row">
            <div class="v-tabs v-tabs--grow theme--light">
              <div role="tablist" class="v-item-group theme--light v-slide-group v-tabs-bar v-tabs-bar--is-mobile primary--text primary">
                <div class="v-slide-group__prev v-slide-group__prev--disabled">
                  <transition-stub name="fade-transition"></transition-stub>
                </div>
                <div class="v-slide-group__wrapper">
                  <div class="v-slide-group__content v-tabs-bar__content">
                    <div class="v-tabs-slider-wrapper" style="transition: none;">
                      <div class="v-tabs-slider"></div>
                    </div>
                    <div tabindex="0" aria-selected="true" role="tab" class="v-tab v-tab--active">
                      ヘッダレコード
                    </div>
                    <div tabindex="0" aria-selected="false" role="tab" class="v-tab">
                      データレコード
                    </div>
                    <div tabindex="0" aria-selected="false" role="tab" class="v-tab">
                      トレーラレコード
                    </div>
                    <div tabindex="0" aria-selected="false" role="tab" class="v-tab">
                      エンドレコード
                    </div>
                    <div tabindex="0" aria-selected="false" role="tab" class="v-tab">
                      不明
                    </div>
                  </div>
                </div>
                <div class="v-slide-group__next v-slide-group__next--disabled">
                  <transition-stub name="fade-transition"></transition-stub>
                </div>
              </div>
              <div class="v-window v-item-group theme--light v-tabs-items">
                <div class="v-window__container">
                  <transition-stub name="">
                    <!---->
                  </transition-stub>
                  <transition-stub name="">
                    <!---->
                  </transition-stub>
                  <transition-stub name="">
                    <!---->
                  </transition-stub>
                  <transition-stub name="">
                    <!---->
                  </transition-stub>
                  <transition-stub name="">
                    <!---->
                  </transition-stub>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;
